# semantic_parsing

./: .gitignore  MeTTaSpecifiction.txt  ReadMe.txt  check_compound_predicates.py  consistency_notes.md  convert_to_opencog_pln.py  convert_to_pln.py  convert_to_predicate_logic.py  extract.py  extract_paragraphs.py  filterWithLLM.py  filter_pl.py  integrate_corpusgenerator.py  main.py  process_least_complex.py  project.info  prompts.py  pyproject.toml  python_metta_example.py  rag.py  ragclass.py  rate_complexity.py  requirements.txt  rules.metta  test.metta  topredlog.py
NL2PLN/: __init__.py  __main__.py  convert_to_pln.py  convert_to_predicate_logic.py  nl2pln.py  puzzle_main.py  puzzle_manager.py  query.py
NL2PLN/consistency/: roundtrip.py
NL2PLN/metta/: chainer.metta  metta_handler.py  rules.metta  sythesize.metta
NL2PLN/tests/: __init__.py  example_puzzle.py  test_checker.py  test_common.py  (+1 more)
Old/: main.py
cluster/: cluster_rater.py  main.py
corpusgenerator/: .gitignore  README.md  bootstrapping_example.md  corpus_bootstrapping.md  corpus_generator.py  embedder.py  generate_corpus.py  llm_client.py  main.py  print_knowledge_graph.py  requirements.txt  utils.py
metta/: Intersection.metta  chainer.metta  metta_handler.py  python_metta_example.py  rules.metta  rules_pln.metta  sythesize.metta
processing/: extract.py  extract_rules.py  rate_complexity.py
scraping/: download_wikipedia_articles.py  dswe.py  extract_paragraphs.py
synthesizepy/: synthesizer.py  synthesizer_handler.py
utils/: checker.py  common.py  prompts.py  ragclass.py
(+33 files in other folders)
