[project]
name = "sentence-complexity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "dspy-ai>=2.5.43",
    "hyperon>=0.2.1",
    "ollama>=0.4.4",
    "pytest>=8.3.4",
    "qdrant-client>=1.12.1",
    "requests>=2.32.3",
]
